# docs/swagger.json
@@ -1,7 +1,7 @@
 {
     "swagger": "2.0",
     "info": {
-        "title": "工单系统API文档",
+        "title": "文件统一上传API文档",
         "contact": {
             "name": "Gong Zhigang",
             "email": "zggong@aibee.com"
@@ -22,6 +22,84 @@
                     "文件"
                 ],
                 "summary": "上传文件接口",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "是否为多文件上传",
+                        "name": "isMultipart",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "上传文件类型 images/file/media",
+                        "name": "upload_type",
+                        "in": "query"
+                    },
+                    {
+                        "type": "file",
+                        "description": "文件集",
+                        "name": "file",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "0": {
+                        "description": ""
+                    }
+                }
+            }
+        },
+        "/api/v1/web3/ipfs": {
+            "get": {
+                "description": "上传文件接口",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "文件"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "是否为多文件上传",
+                        "name": "isMultipart",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "上传文件类型 images/file/media",
+                        "name": "upload_type",
+                        "in": "query"
+                    },
+                    {
+                        "type": "file",
+                        "description": "文件集",
+                        "name": "file",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "0": {
+                        "description": ""
+                    }
+                }
+            },
+            "post": {
+                "description": "上传文件接口",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "文件"
+                ],
                 "parameters": [
                     {
                         "type": "string",
