# handler/upload/upload.go
@@ -2,11 +2,9 @@ package upload
 
 import (
 	"fmt"
-	"net/http"
 	"strconv"
 	"strings"
 	"unicorn-files/models/files"
-	"unicorn-files/pkg/connection"
 	"unicorn-files/pkg/logger"
 	"unicorn-files/pkg/response/code"
 	. "unicorn-files/pkg/response/response"
@@ -16,19 +14,7 @@ import (
 	"github.com/spf13/viper"
 )
 
-/*
-  @Author : zggong
-*/
-
-// always return http.StatusOK
-type UploadResponse struct {
-	Code    int         `json:"code"`
-	ErrCode int         `json:"errno"`
-	Errmsg  string      `json:"errmsg"`
-	Data    interface{} `json:"data"`
-}
-
-// @Summary 上传文件接口
+// UploadMutiFileHandler 上传文件接口
 // @Description 上传文件接口
 // @Tags 文件
 // @Accept json
@@ -40,26 +26,8 @@ type UploadResponse struct {
 // @Router /api/v1/upload [post]
 func UploadMutiFileHandler(c *gin.Context) {
 	isMulti := c.DefaultQuery("isMultipart", "false")
-	//uploadType := c.DefaultQuery("upload_type", "images")
 	logger.Info(isMulti)
-	//logger.Info(uploadType)
 
-	//var filesMax int64
-	//if uploadType == "images" {
-	//	filesMax = 500 << 20 // 2M
-	//} else if uploadType == "file" {
-	//	filesMax = 500 << 20 // 50M
-	//} else if uploadType == "media" {
-	//	filesMax = 5000 << 20 // 500M
-	//}
-	//
-	//c.Request.Body = http.MaxBytesReader(nil, c.Request.Body, filesMax)
-	//// 设置文件大小，文件最大为2M
-	//err := c.Request.ParseMultipartForm(filesMax)
-	//if err != nil {
-	//	Response(c, code.InternalServerError, nil, "文件太大了")
-	//	return
-	//}
 	// =============================================================
 	us, _ := uuid.NewV4()
 	uuidString := us.String()
@@ -76,21 +44,19 @@ func UploadMutiFileHandler(c *gin.Context) {
 
 	var fileDataList []files.File
 	for _, file := range formFiles {
-		fileName := fmt.Sprintf("%s|%s", uuidString, file.Filename)
-		err := c.SaveUploadedFile(file, fmt.Sprintf("%s%v", viper.GetString("filePath"), fileName))
+		fileId := fmt.Sprintf("%s|%s", uuidString, file.Filename)
+		err := c.SaveUploadedFile(file, fmt.Sprintf("%s%v", viper.GetString("filePath"), fileId))
 		if err != nil {
 			logger.Error(err)
 			continue
 		}
 
-		data := files.File{
-			FileId:   fileName,
-			Url:      viper.GetString("uploadUrl") + fileName,
-			FileName: file.Filename,
-		}
-		if err := data.Create(); err != nil {
+		// 存库
+		data, err := saveFileToDB(fileId, file.Filename)
+		if err != nil {
 			logger.Error(err.Error())
 		}
+
 		fileDataList = append(fileDataList, data)
 	}
 
@@ -99,38 +65,25 @@ func UploadMutiFileHandler(c *gin.Context) {
 		Response(c, code.UploadError, nil, "上传文件失败")
 		return
 	}
-	// 保存文件到db
-	//go saveFile(fileDataList)
 
 	if isMultipart {
-		c.JSON(http.StatusOK, UploadResponse{
-			Code:    200,
-			ErrCode: 0,
-			Errmsg:  "",
-			Data:    fileDataList,
-		})
+		Response(c, code.Success, fileDataList, "上传成功")
 	} else {
-		c.JSON(http.StatusOK, UploadResponse{
-			Code:    200,
-			ErrCode: 0,
-			Errmsg:  "",
-			Data:    fileDataList[0],
-		})
+		Response(c, code.Success, fileDataList[0], "上传成功")
 	}
 }
 
-// 保存文件
-func saveFile(fileDataList []files.File) {
-	for _, file := range fileDataList {
-		defer func() {
-			if err := recover(); err != nil {
-				logger.Error(err)
-			}
-		}()
-
-		if err := connection.DB.Self.Save(file).Error; err != nil {
-			logger.Error(err.Error())
-		}
-
+// @saveFileToDB 保存文件到数据库
+func saveFileToDB(fileId string, fileName string) (files.File, error) {
+	data := files.File{
+		FileId:   fileId,
+		Url:      viper.GetString("uploadUrl") + fileId,
+		FileName: fileName,
 	}
+	if err := data.Create(); err != nil {
+		logger.Error(err.Error())
+		return data, err
+	}
+
+	return data, nil
 }
